# URAG_V2

./: .gitignore  README.md  augmented_quicktest.jsonl  example_Input.txt  pyproject.toml  pyrightconfig.json  semantic_chunks.json
config/: kernel_config.yaml  model_config.yaml  prompt_templates.yaml
datasets/: test.csv  train_multihop.csv  viquad_multihop_final.jsonl
demo_docs/: a.txt  b.txt
demo_faqs/: root.jsonl
docs/: indexing_agent.md
examples/: d_manager_test.py  f_manager_test.py  f_manager_test_2.py  faq_test_demo.py  faq_test_demo_IMPORTANT.py  generate_text_test_IMPORTANT.py  kernel_test_IMPORTANT.py  meta_manager_test.py  meta_manager_test_IMPORTANT.py  milvus_inspect.py  search_test.py  semanticChunker_Test_1.py  semanticChunker_Test_2.py  semantic_chunker_final.py  skeletonsample.py
examples/embedding_test/: test_1.py
examples/experiment/: embed_to_db.py  embed_to_db_csv.py  embed_to_db_doc.py  inference.py
examples/faq_test/: test1.py  test2.py  test3.py  test4.py
examples/indexing_test/: indexing_test_1.py  indexing_test_2.py  test_agent_basic.py
examples/semanticChunker_Test_input/: semanticChunker_Test_Input_1.txt  semanticChunker_Test_Input_2.txt  semanticChunker_Test_Input_3.txt  semanticChunker_Test_Input_4.txt
index/: config.json  faq_matrix.npy
legacy_code/: semanticChunker_llm.py  textGen_agent.py
src/UI/: milvus_stalk.py  streamlit.py
src/embedding/: embedding_agent.py
src/indexing/: indexing_agent.py
src/llm/: embedding_agent.py  llm_kernel.py
src/managers/: meta_manager.py  (+2 more)
tmp_chunks/: doc_demo_1758614697.json
(+12 files in other folders)
